@@ -3,6 +3,7 @@ Revision history for Database-Abstraction
 0.28
 	Added the import method
 	Fix determination of BerkeleyDB
+	Added BerkeleyDB test
 
 0.27	Sat Jun 14 20:56:27 EDT 2025
 	Use Object::Configure rather than Class::Debug
